more nav styling

--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -4,6 +4,12 @@
   align-items: center;
 }
 
+@mixin betweenFlex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 @mixin fixedCenter {
   position: absolute;
   top: 50%;
