--- a/src/sass/imports/imports.scss
+++ b/src/sass/imports/imports.scss
@@ -21,3 +21,7 @@
 @import '../base/typography';
 
 @import '../components/nav';
+@import '../components/footer';
+
+@import '../pages/home';
+@import '../pages/product';
