--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,4 +1,12 @@
 .home {
-  margin-top: 20rem;
-  height: 75vh;
+  @include centerFlex;
+  @include verticalPageMargin;
+
+  &__photo {
+    height: 40rem;
+
+    &:first-child {
+      margin-right: 1rem;
+    }
+  }
 }
