--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -19,6 +19,7 @@ body {
 
 a {
   text-decoration: none;
+  transition: color .25s;
 
   &:link,
   &:visited {
@@ -27,7 +28,7 @@ a {
 
   &:active,
   &:hover {
-    color: rgba($black, 0.75);
+    color: $near-black;
   }
 }
 
