--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,12 +1,36 @@
 .home {
-  @include centerFlex;
   @include verticalPageMargin;
+
+  &__flex-container {
+    @include centerFlex;
+    margin: 0 20rem;
+    flex-flow: wrap;
+  }
 
   &__photo {
     height: 40rem;
 
     &:first-child {
       margin-right: 1rem;
+    }
+  }
+
+  &__info-boxes {
+    @include centerFlex;
+    flex-grow: 0;
+    flex-shrink: 0;
+    margin: 1.275rem;
+    background-color: $dark-sec;
+    $box-size: 20rem;
+    height: $box-size;
+    width: $box-size;
+    text-align: center;
+    transform: translateX(-.5rem);
+
+    transition: all .25s;
+
+    &:hover {
+      box-shadow: 1rem 1rem 2rem rgba($black, 0.25);
     }
   }
 }
