--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
   padding: 2rem;
-  background-color: $dark-main;
+  background-color: $dark-sec;
 
   &__container {
     display: flex;
