--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -23,7 +23,7 @@
 
 @mixin centerGrid {
   display: grid;
-  justify-content: center;
+  justify-items: center;
   align-items: center;
 }
 
@@ -60,6 +60,9 @@
 //////////////////////////////
 ////// general styling ///////
 //////////////////////////////
+@mixin lightShadow {
+  box-shadow: 0.5rem 0.5rem 1rem rgba($black, 0.5);
+}
 
 @mixin boxShadow {
   box-shadow: 1rem 1rem 5rem rgba($black, 0.5);
