--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -31,7 +31,7 @@
     transition: all .25s;
 
     &:hover {
-      box-shadow: 0.5rem 0.5rem 1rem rgba($black, 0.5);
+      @include lightShadow;
     }
   }
 
