minor changes to product details

--- a/src/sass/pages/_product.scss
+++ b/src/sass/pages/_product.scss
@@ -52,8 +52,9 @@ $img-selector-margin: .2rem;
 
       div {
         @include centerFlex;
+        font-size: 1.6rem;
         margin: .5rem;
-        width: 25rem;
+        width: 20rem;
         border: $black .2rem solid;
 
         img {
