--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -5,7 +5,7 @@ html {
   font-size: 62.5%;
 
   // replace these with your choice 
-  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+  font-family: sans-serif, Arial, Helvetica;
 
 }
 
