gzip scripts added

--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -42,19 +42,19 @@
   &__box {
 
     &-1 {
-      @include darkCenterBG('../../resources/images/vendor/unsplash/prs.jfif');
+      @include darkCenterBG('../../resources/images/vendor/prs.webp');
     }
 
     &-2 {
-      @include darkCenterBG('../../resources/images/vendor/unsplash/strat.jfif');
+      @include darkCenterBG('../../resources/images/vendor/strat.webp');
     }
 
     &-3 {
-      @include darkCenterBG('../../resources/images/vendor/unsplash/5150.jfif');
+      @include darkCenterBG('../../resources/images/vendor/5150.webp');
     }
 
     &-4 {
-      @include darkCenterBG('../../resources/images/vendor/unsplash/strat-item.jpg');
+      @include darkCenterBG('../../resources/images/vendor/strat-item.webp');
     }
   }
 }
