--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -57,4 +57,8 @@
       @include darkCenterBG('../../resources/images/vendor/strat-item.webp');
     }
   }
+
+  &__video {
+    outline: none;
+  }
 }
